Fixed a regression introduced in the recent update where long log messages wouldn't be wrapped correctly.

--- a/bin/gui/css/main.css
+++ b/bin/gui/css/main.css
@@ -199,8 +199,10 @@ ul.tabs {
 }
 
     .log-contents > div {
+        word-wrap: break-word;
         word-break: break-all;
-        white-space: pre;
+        overflow-wrap: break-word;
+        white-space: pre-wrap;
         font-family: Consolas, monaco, monospace;
         font-size: 12px;
     }
